--- a/src/app/pages/reservar/reservar.page.scss
+++ b/src/app/pages/reservar/reservar.page.scss
@@ -55,12 +55,12 @@ ion-content {
 //geoloca
 
 .mapa-iframe {
-  width: 100%; /* El mapa ocupará todo el ancho disponible */
-  height: 300px; /* Define una altura fija para el mapa, ajusta según sea necesario */
-  border: 1px solid #ddd; /* Agrega un borde sutil */
-  border-radius: 8px; /* Bordes redondeados para una apariencia más moderna */
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Sombra suave para darle profundidad */
-  margin-top: 15px; /* Espacio superior para separarlo del botón */
-  overflow: hidden; /* Asegura que los bordes redondeados se apliquen correctamente */
+  width: 100%;
+  height: 300px; /* altura fija */
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  margin-top: 15px;
+  overflow: hidden; /* que los bordes redondeados se apliquen correctamente */
 }
 
