--- a/src/app/pages/reservar/reservar.page.html
+++ b/src/app/pages/reservar/reservar.page.html
@@ -1,13 +1,10 @@
 <ion-content [fullscreen]="true">
   <ion-button expand="block" (click)="obtenerPosicionActual()" id="obtenerPosicion">Sucursal mas cercana</ion-button>
-  @if (errorMensaje) {
-  <p class="ion-text-danger">{{errorMensaje}}</p>
-  }
-  @if(googleMapsUrl){
-  <p>{{nombreSucursalCercana}}</p>
-  <iframe [src]="googleMapsUrl | urlSegura" class="mapa-iframe" id="mapa-iframe"></iframe>
-  <ion-button expand="block" (click)="ocultarMapa()" id="ocultarMapa">Ocultar mapa</ion-button>
-  }
+    @if(googleMapsUrl && mostrarMapaFlag){
+    <iframe [src]="googleMapsUrl | urlSegura" class="mapa-iframe" id="mapa-iframe"></iframe>
+    <ion-button expand="block" (click)="ocultarMapa()" id="ocultarMapa">Ocultar mapa</ion-button>
+  } @else if (googleMapsUrl && !mostrarMapaFlag) { <ion-button expand="block" (click)="mostrarMapa()">Mostrar mapa</ion-button>
+  }
   <ion-title class="ion-text-center"><ion-icon name="calendar-outline"></ion-icon></ion-title>
   <ion-title class="ion-text-center">Nueva reserva</ion-title>
   <form [formGroup]="formReserva" (ngSubmit)="submitForm()" id="formReserva">
